k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mandal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mandal-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-uploads
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mandal
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
